#ifndef VERTEX_H
#define VERTEX_H


class Vertex
{
public:
    Vertex();

};

#endif // VERTEX_H
